--- a/org.knime.hdf5/build.properties
+++ b/org.knime.hdf5/build.properties
@@ -4,6 +4,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/jarhdf5-1.10.1.jar,\
-               lib/slf4j-api-1.7.5.jar,\
-               lib/slf4j-nop-1.7.5.jar,\
-               lib/slf4j-simple-1.7.5.jar
+               lib/slf4j-api-1.7.5.jar
