--- a/org.knime.hdf5/.classpath
+++ b/org.knime.hdf5/.classpath
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/jarhdf-3.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jarhdf5-3.3.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/jarhdf5-1.10.1.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Program%20Files/HDF_Group/HDF5/1.10.1/hdf5_java_doc/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
