Updated to newer library version.

--- a/org.knime.hdf5/build.properties
+++ b/org.knime.hdf5/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/slf4j-api-1.7.5.jar,\
-               lib/jarhdf5-3.3.2.jar
+               lib/jarhdf-4.2.12.jar,\
+               lib/jarhdf5-1.10.1.jar,\
+               lib/slf4j-api-1.7.5.jar
