Small changes in plugin name and provider and changes in build.properties.

--- a/org.knime.hdf5/build.properties
+++ b/org.knime.hdf5/build.properties
@@ -3,6 +3,9 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/jarhdf-4.2.12.jar,\
-               lib/jarhdf5-1.10.1.jar,\
-               lib/slf4j-api-1.7.5.jar
+               lib/,\
+               bin/
+src.includes = lib/,\
+               META-INF/,\
+               plugin.xml,\
+               src/
