Dialog is now similar to Column Filter
- the next thing to do is that it is also executable after configuration

--- a/org.knime.hdf5/build.properties
+++ b/org.knime.hdf5/build.properties
@@ -5,7 +5,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
                lib/,\
                bin/
-src.includes = lib/,\
-               META-INF/,\
-               plugin.xml,\
-               src/
+src.includes = lib/
