Changed build.properties, added LICENSE to individual projects.

--- a/org.knime.hdf5/build.properties
+++ b/org.knime.hdf5/build.properties
@@ -4,5 +4,10 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/,\
-               bin/
-src.includes = lib/
+               bin/,\
+               LICENSE.txt
+src.includes = lib/,\
+               plugin.xml,\
+               src/,\
+               META-INF/MANIFEST.MF,\
+               LICENSE.txt
