--- a/org.knime.hdf5.feature/build.properties
+++ b/org.knime.hdf5.feature/build.properties
@@ -1,1 +1,4 @@
-bin.includes = feature.xml
+bin.includes = feature.xml,\
+               LICENSE.txt
+src.includes = LICENSE.txt,\
+               feature.xml
