Add files for writer

--- a/org.knime.hdf5/plugin.xml
+++ b/org.knime.hdf5/plugin.xml
@@ -19,4 +19,11 @@
 			category-path="/community/hdf5">
 		</node>
 	</extension>
+	<extension
+		point="org.knime.workbench.repository.nodes">
+		<node
+			deprecated="false"
+			factory-class="org.knime.hdf5.nodes.writer.HDF5WriterNodeFactory">
+		</node>
+	</extension>
 </plugin>
