--- a/org.knime.hdf5/build.properties
+++ b/org.knime.hdf5/build.properties
@@ -5,9 +5,11 @@ bin.includes = META-INF/,\
                plugin.xml,\
                lib/,\
                bin/,\
-               LICENSE.txt
+               LICENSE.txt,\
+               icons/
 src.includes = lib/,\
                plugin.xml,\
                src/,\
                META-INF/MANIFEST.MF,\
-               LICENSE.txt
+               LICENSE.txt,\
+               icons/
